# uzbekistan-policy-engine

./: .dockerignore  .gitignore  .impeccable.md  .mcp.json  CERR-Task-Guide.docx  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Git-GitHub-Guide-CERR-Team.pptx  LICENSE  README.md  ROADMAP.md  index.html  spec.html  uzbekistan_policy_engine_frontend_reimagining_spec.md
.github/: pull_request_template.md
cge_model/: index.html
claude-logs/: 2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md
dfm_nowcast/: dfm_data.js  index.html
docs/: MVP_HANDOFF.md  ai-governance.md  testing-philosophy.md
fpp_model/: index.html
io_model/: index.html  io_data.js  io_data.json
mcp_server/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
mcp_server/api/: __init__.py  app.py  registry.py  schemas.py
mcp_server/data/: convert_js_data.py
mcp_server/helpers/: validation.py
mcp_server/models/: cge.py  dfm.py  fpp.py  io_model.py  pe.py  qpm.py
mcp_server/scripts/: run_literature_update.py  run_reforms_update.py
mcp_server/tests/: test_cge.py  test_dfm.py  test_fpp.py  test_io.py  test_pe.py  test_qpm.py  test_registry_api.py
mcp_server/tools/: literature.py  reforms.py  registry.py  research.py
pe_model/: index.html  pe_data.js
qpm_uzbekistan/: index.html
scripts/: create-github-issues.sh  create-guide-pptx.js  create-task-guide.js  export_dfm.R  export_io.mjs  export_qpm.R
shared/: ai-advisor.js  design-system.css  i18n.js  literature-data.js  model-registry.js  parameter-registry.js  parameter-registry.json  registry-loader.js  (+6 more)
(+327 files in other folders)
